[skip ci] add authentik integration + jwt support
